--- a/scss/blocks/_navbar.scss
+++ b/scss/blocks/_navbar.scss
@@ -34,6 +34,7 @@
   display: flex;
   align-items: center;
   &__button {
+    font-size: 12px;
     padding: 21px 28px;
     @media (max-width: 425px) {
       font-size: 10px;
