--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -16,11 +16,9 @@
   &__title {
     font-size: 30px;
     margin: 0 0 60px;
+    text-align: right;
     @media (max-width: 993px) {
       text-align: center;
-    }
-    @media (max-width: 463px) {
-      font-size: 26px;
     }
     @media (max-width: 560px) {
       margin-bottom: 40px;
