--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -20,6 +20,13 @@ body {
 
 .section-title {
   @include black;
+  text-align: center;
+  margin: 0;
+}
+
+.section-subtitle {
+  text-align: center;
+  font-size: 20px;
 }
 
 .input {
