--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,9 @@
 // Стилизация скроллбара
 @import 'scrollbar';
 
+// Прокрутка страницы
+@import 'scroll-up';
+
 // Блоки
 @import 'blocks/navbar';
 @import 'blocks/hero';
