--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,5 @@
 @import 'blocks/all-parts';
 @import 'blocks/part-search';
 @import 'blocks/safety';
+@import 'blocks/bonuses';
+@import 'blocks/questions';
