--- a/scss/blocks/_questions.scss
+++ b/scss/blocks/_questions.scss
@@ -8,6 +8,9 @@
     font-size: 36px;
     color: #ffffff;
     margin-bottom: 30px;
+    @media (max-width: 463px) {
+      font-size: 32px;
+    }
   }
 
   &__subtitle {
@@ -15,11 +18,17 @@
     font-weight: 400;
     color: #ffffff;
     margin-bottom: 100px;
+    @media (max-width: 560px) {
+      margin-bottom: 50px;
+    }
   }
 }
 
 .questions-wrapper {
   display: flex;
+  @media (max-width: 993px) {
+    flex-wrap: wrap-reverse;
+  }
 }
 
 .questions-list {
@@ -27,6 +36,14 @@
   margin: 0;
   padding: 0;
   list-style-position: inside;
+  @media (max-width: 993px) {
+    flex: 100%;
+    max-width: 570px;
+    margin-top: 80px;
+  }
+  @media (max-width: 560px) {
+    margin-top: 50px;
+  }
   &__item {
     margin-bottom: 55px;
     color: #ffffff;
@@ -48,11 +65,16 @@
 
 
   &__link {
+    display: inline-block;
     text-decoration: underline #B0B0B0;
     color: #ffffff;
     margin-left: 30px;
+    @media (max-width: 461px) {
+      margin-left: 10px;
+      max-width: 250px;
+      vertical-align: top;
+    }
     cursor: pointer;
-    position: relative;
     &:hover {
       color: #579eff;
       text-decoration: none;
@@ -63,21 +85,68 @@
 .questions-list-more {
   &__text {
     margin-left: 30px;
+    @media (max-width: 461px) {
+      margin-left: 10px;
+    }
   }
 }
 
 .questions-director {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
   flex: 50%;
-  height: 390px;
-  background: url(../img/questions/director.jpg) no-repeat center center / cover;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  @media (max-width: 993px) {
+    flex: 100%;
+    margin: 0 auto;
+  }
   &__name {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     font-size: 14px;
     color: #ffffff;
     opacity: 0.8;
     background-color: #0b3554;
     padding: 10px 30px 10px 20px;
   }
+  &__img {
+    width: 100%;
+  }
+}
+
+.pop-block {
+  display: flex;
+  flex-direction: row-reverse;
+  background: #fff;
+  color: #000;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  font-size: 14px;
+  padding: 22px 22px 25px;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
+  max-width: 344px;
+  margin-top: 30px;
+  @include reg;
+  @media (max-width: 385px) {
+    max-width: 250px;
+  }
+  &:before {
+    content: '\23F6';
+    position: absolute;
+    top: -29px;
+    left: 10px;
+    font-size: 40px;
+    color: #fff;
+    text-shadow: 0px -5px 5px rgba(0, 0, 0, 0.5);
+  }
+}
+
+.pop-text-block {
+  padding-right: 20px;
+}
+
+.pop-block-close {
+  color: #15151e;
 }
