--- a/css/style.css
+++ b/css/style.css
@@ -1069,13 +1069,12 @@ body {
 }
 
 .pop-block:before {
-  content: '\23F6';
+  content: '';
   position: absolute;
   top: -29px;
   left: 10px;
-  font-size: 40px;
-  color: #fff;
-  text-shadow: 0px -5px 5px rgba(0, 0, 0, 0.5);
+  border: 20px solid transparent;
+  border-bottom: 20px solid #ffffff;
 }
 
 .pop-text-block {
