--- a/scss/blocks/_questions.scss
+++ b/scss/blocks/_questions.scss
@@ -133,13 +133,12 @@
     max-width: 250px;
   }
   &:before {
-    content: '\23F6';
+    content: '';
     position: absolute;
     top: -29px;
     left: 10px;
-    font-size: 40px;
-    color: #fff;
-    text-shadow: 0px -5px 5px rgba(0, 0, 0, 0.5);
+    border: 20px solid transparent;
+    border-bottom: 20px solid #ffffff;
   }
 }
 
