--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,3 +25,5 @@
 @import 'blocks/safety';
 @import 'blocks/bonuses';
 @import 'blocks/questions';
+@import 'blocks/comfort';
+@import 'blocks/storage';
