--- a/css/style.css
+++ b/css/style.css
@@ -1203,4 +1203,57 @@ body {
   height: auto;
   max-width: 100%;
 }
+
+.service__title {
+  font-size: 36px;
+  max-width: 830px;
+  margin: 0 auto 100px;
+}
+
+@media (max-width: 622px) {
+  .service__title {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 430px) {
+  .service__title {
+    font-size: 24px;
+  }
+}
+
+.service-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.service-list__item {
+  text-align: center;
+  -webkit-box-flex: 33%;
+      -ms-flex: 33%;
+          flex: 33%;
+}
+
+@media (max-width: 1182px) {
+  .service-list__item {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+  }
+  .service-list__item:not(:first-child) {
+    margin-top: 60px;
+  }
+}
+
+.service-list__text {
+  font-size: 18px;
+  max-width: 310px;
+  margin: 40px auto 0;
+}
 /*# sourceMappingURL=style.css.map */
