--- a/scss/_scroll-up.scss
+++ b/scss/_scroll-up.scss
@@ -11,6 +11,7 @@
   align-items: center;
   border-radius: 50%;
   transition: .5s;
+  cursor: pointer;
   @media (max-width: 768px) {
     background: (#133a5f);
     bottom: 5%;
