--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ body {
   border-radius: 50%;
   -webkit-transition: .5s;
   transition: .5s;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -1361,10 +1362,85 @@ body {
 .office__address {
   font-size: 18px;
   margin-bottom: 35px;
+  font-style: normal;
 }
 
 .office__phone {
   font-size: 24px;
   color: #000000;
+}
+
+.footer {
+  background-color: #191919;
+}
+
+@media (max-width: 753px) {
+  .footer__logo {
+    display: none;
+  }
+}
+
+.footer__develop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  color: #ffffff;
+}
+
+.footer__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 120px;
+}
+
+@media (max-width: 753px) {
+  .footer__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.footer__love-img {
+  margin: 0 5px;
+}
+
+.footer__design-developer {
+  margin-left: 10px;
+}
+
+.footer-phone {
+  color: #ffffff;
+  text-align: center;
+}
+
+@media (max-width: 753px) {
+  .footer-phone {
+    margin-bottom: 20px;
+  }
+}
+
+.footer-phone__text {
+  font-size: 13px;
+  margin-bottom: 13px;
+}
+
+.footer-phone__tel {
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
