Наконец сверстал этот длинный лендинг!

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,4 +30,5 @@
 @import 'blocks/service';
 @import 'blocks/consultation';
 @import 'blocks/office';
+@import 'blocks/map';
 @import 'blocks/footer';
