--- a/css/style.css
+++ b/css/style.css
@@ -29,21 +29,21 @@
 
 @font-face {
   font-family: 'ProximaNovaRegular';
-  font-display: auto;
+  font-display: swap;
   src: url("../fonts/ProximaNova-Regular.eot");
   src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'ProximaNovaBold';
-  font-display: auto;
+  font-display: swap;
   src: url("../fonts/ProximaNova-Bold.eot");
   src: url("../fonts/ProximaNova-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Bold.woff") format("woff"), url("../fonts/ProximaNova-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'ProximaNovaBlack';
-  font-display: auto;
+  font-display: swap;
   src: url("../fonts/ProximaNova-Black.eot");
   src: url("../fonts/ProximaNova-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Black.woff") format("woff"), url("../fonts/ProximaNova-Black.ttf") format("truetype");
 }
@@ -1375,6 +1375,7 @@ body {
   display: block;
   width: 100%;
   height: 375px;
+  border: 0;
 }
 
 .footer {
