--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'ProximaNovaRegular';
-  font-display: auto;
+  font-display: swap;
   src: url('../fonts/ProximaNova-Regular.eot');
   src: url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/ProximaNova-Regular.woff') format('woff'),
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'ProximaNovaBold';
-  font-display: auto;
+  font-display: swap;
   src: url('../fonts/ProximaNova-Bold.eot');
   src: url('../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
     url('../fonts/ProximaNova-Bold.woff') format('woff'),
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'ProximaNovaBlack';
-  font-display: auto;
+  font-display: swap;
   src: url('../fonts/ProximaNova-Black.eot');
   src: url('../fonts/ProximaNova-Black.eot?#iefix') format('embedded-opentype'),
     url('../fonts/ProximaNova-Black.woff') format('woff'),
