--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background: #373B44;
-  background: -webkit-gradient(linear, left top, left bottom, from(#4286f4), to(#373B44));
-  background: linear-gradient(to bottom, #4286f4, #373B44);
+  background: -webkit-gradient(linear, left top, left bottom, from(#1c3a94), to(#7a99d9));
+  background: linear-gradient(to bottom, #1c3a94, #7a99d9);
   border-radius: 8px;
   border: 2px solid #d4d4d4; }
 
@@ -1154,10 +1154,22 @@ body {
   @media (max-width: 753px) {
     .footer__logo {
       display: none; } }
+  .footer__design-author {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 13px; }
   .footer__develop {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1173,7 +1185,8 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 120px; }
+    min-height: 120px;
+    padding: 10px 0; }
     @media (max-width: 753px) {
       .footer__content {
         -webkit-box-orient: vertical;
@@ -1199,4 +1212,25 @@ body {
     margin-bottom: 13px; }
   .footer-phone__tel {
     font-size: 18px; }
+
+.developer-link {
+  color: #00aeff;
+  text-decoration: none;
+  position: relative;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s; }
+  .developer-link:before {
+    content: "";
+    width: 0;
+    height: 0.1em;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    background: #00aeff;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s; }
+  .developer-link:hover:before {
+    width: 100%;
+    left: 0;
+    background: #00aeff; }
 /*# sourceMappingURL=style.css.map */
