--- a/scss/_scrollbar.scss
+++ b/scss/_scrollbar.scss
@@ -9,8 +9,8 @@
 
 ::-webkit-scrollbar-thumb {
   background: #373B44;
-  background: -webkit-linear-gradient(to bottom, #4286f4, #373B44);
-  background: linear-gradient(to bottom, #4286f4, #373B44);
+  background: -webkit-linear-gradient(to bottom, #1c3a94, #7a99d9);
+  background: linear-gradient(to bottom, #1c3a94, #7a99d9);
   border-radius: 8px;
   border: 2px solid #d4d4d4;
 }
