--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -6,18 +6,26 @@
     }
   }
 
+  &__design-author {
+    display: flex;
+    align-items: center;
+    margin-bottom: 13px;
+  }
+
   &__develop {
     display: flex;
+    flex-direction: column;
     align-items: center;
     font-size: 12px;
     color: #ffffff;
-  }
+  } 
 
   &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 120px;
+    min-height: 120px;
+    padding: 10px 0;
     @media (max-width: 753px) {
       flex-direction: column-reverse;
       justify-content: center;
@@ -49,3 +57,28 @@
   }
 }
 
+.developer-link {
+  color: #00aeff;
+  text-decoration: none;
+  position: relative;
+  transition: all 0.6s;
+
+  &:before {
+    content: "";
+    width: 0;
+    height: 0.1em;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    background: #00aeff;
+    transition: all 0.3s;
+  }
+
+  &:hover {
+    &:before {
+      width: 100%;
+      left: 0;
+      background: #00aeff;
+    }
+  }
+}
